# rtkmcp

./: .gitattributes  Cargo.toml  Dockerfile  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/filters/: ansi.rs  build.rs  git.rs  lang.rs  mod.rs  noise.rs  truncate.rs
src/protocol/: handler.rs  types.rs
src/tools/: dir.rs  git.rs  mod.rs  read_file.rs  registry.rs  search.rs  shell_run.rs
