[package]
name = "rtkmcp"
version = "0.1.0"
edition = "2021"
description = "Token-efficient MCP server — filters LLM command output to minimize token waste"
license = "MIT"
keywords = ["mcp", "llm", "token", "filter", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1.0"
regex      = "1"
lazy_static = "1.4"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[lints.rust]
unsafe_code = "deny"
